--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!--<link rel="stylesheet" href="style.css">-->
-    <link rel="stylesheet" href="../dist/output.css">
+    <!--<link rel="stylesheet" href="../dist/output.css">-->
+    <link rel="stylesheet" href="./dist/output.css">
     <title>Document</title>
 </head>
 <body class="bg-slate-900 text-white font-mono">
@@ -17,7 +18,7 @@
         <div id="top-form" class="flex justify-center mt-20">
             <form id="form">
                 <label class="white pr-8 py-4 text-4xl">Enter your Task Here: </label>
-                <input type="text" id="task-input" placeholder="Feed your plan here >>>>>" class="rounded border-2  border-zinc-300 bg-inherit mr-8 px-20 py-4 ps-1 w-full lg:w-96" >
+                <input type="text" id="task-input" name="inputZZ" placeholder="Feed your plan here >>>>>" class="rounded border-2  border-zinc-300 bg-inherit mr-8 px-20 py-4 ps-1 w-full lg:w-96" >
                 <input type="submit" value="Add Task" id="task-submit" class="rounded ml-4 bg-slate-500 p-3">
             </form>
 
